Fixed #736 product parent overflow

--- a/autonomie/static/css/main.css
+++ b/autonomie/static/css/main.css
@@ -410,15 +410,6 @@ ul.form-tabs li.error a {
     .loginbox #authentication input[type=password] {
       margin-bottom: 4px; }
 
-/*
- * Custom icon definition reusing fontawesome icons
- */
-.icon-success:before {
-  content: "\f058"; }
-
-.icon-danger:before, .icon-warning:before {
-  content: "\f071"; }
-
 html {
   font-size: 16px; }
 
@@ -616,6 +607,8 @@ header .navbar .nav > li > a {
 /* Jstree */
 .jstree {
   display: inline-block; }
+  .jstree.jstree-checkbox-selection {
+    margin-bottom: 5%; }
 
 /* Custom close button class */
 .large-close {
